--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -38,14 +38,14 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/proyecto-final
 endorsed.classpath=
 excludes=
+file.reference.AbsoluteLayout-RELEASE190.jar=src\\otros\\AbsoluteLayout-RELEASE190.jar
 file.reference.AbsoluteLayout-RELEASE190.jar-1=pkg/AbsoluteLayout-RELEASE190.jar
-file.reference.AbsoluteLayout.jar=C:\\Program Files\\NetBeans-19\\netbeans\\java\\modules\\ext\\AbsoluteLayout.jar
 file.reference.proyecto-final-src=src
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.AbsoluteLayout-RELEASE190.jar-1}:\
-    ${file.reference.AbsoluteLayout.jar}
+    ${file.reference.AbsoluteLayout-RELEASE190.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
